# segway

./: CMakeLists.txt  README.md
include/box2d/: b2_fixture.h
include/glad/: glad.h
lib/: draw.h  global.h  pendulum.h  pid.h  scene.h  spring.h
src/: draw.cpp  main.cpp  scene.cpp
